refactoring: characters/free to characters/all